# loop-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTEGRATING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  public-api-v1.0.txt
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BETA_SCOPE.md  COMPETITIVE.md  DATA_MODEL.md  VISION.md  phase-a-daemon-plan.md
docs/decisions/: 0001-multi-agent-orchestration-day-one.md  0002-loop-complements-claude-code.md  0003-two-tier-free-self-hosted-paid-saas.md  0004-language-nodejs-typescript.md  0005-hybrid-memory-retrieval.md  0006-lesson-model-not-counter-based.md  0007-mcp-first-substrate-not-runtime.md  0008-closed-model-first.md  0009-open-core-licensing.md  0010-on-disk-file-layout.md  0011-dual-mcp-role-server-and-client.md  0012-claude-as-orchestrator.md  0013-persona-team-session-activation.md  README.md
docs/research/: 2026-05-13-collapse-post-research.md  anthropic-haiku-adapter-pre-research.md  day-10-backfill.md  day-11-learn-notes.md  day-11-post-research.md  day-11-pre-research.md  day-12-learn-notes.md  day-12-post-research.md  day-12-pre-research.md  day-13-learn-notes.md  day-13-post-research.md  day-13-pre-research.md  day-14-audit-report.md  day-14-learn-notes.md  day-14-post-research.md  day-14-pre-research.md  day-15-audit-report.md  day-15-learn-notes.md  day-15-post-research.md  day-15-pre-research.md  day-16-pre-research.md  day-16a-audit-report.md  day-16a-learn-notes.md  day-16a-post-research.md  day-16b-audit-report.md  day-16b-learn-notes.md  day-16b-post-research.md  day-16b-pre-research.md  day-17-audit-report.md  day-17-learn-notes.md  day-17-post-research.md  day-17-pre-research.md  ecc-source-patterns-2026-05-12.md  sentiment-design-rules.md  sentiment-engineering-2026-05-12.md  sentiment-linguistics-2026-05-12.md  workflow-backfill-days-1-9.md
src/: buffer.rs  cli.rs  config.rs  lib.rs  lifecycle.rs  main.rs  observability.rs  paths.rs  pid.rs  serve.rs
src/engine/: context.rs  error.rs  events.rs  lifecycle.rs  mod.rs  paths.rs  pid.rs  scoring.rs  test_support.rs
src/engine/embedding/: error.rs  mock.rs  mod.rs  openai_compatible.rs
src/engine/lessons/: gate.rs  loader.rs  lock.rs  mod.rs  narrative.rs  signals.rs  transitions.rs
src/engine/llm/: error.rs  mock.rs  mod.rs  openai_compatible.rs  request.rs  response.rs
src/engine/manifest/: internal.rs  mod.rs  session.rs
src/engine/memory/: compress.rs  cycle.rs  id.rs  lifecycle.rs  mod.rs  origin.rs  scope.rs  store.rs
src/engine/personas/: mod.rs  store.rs
src/engine/phase_ledger/: mod.rs
src/engine/sentiment/: attribution.rs  classifier.rs  mod.rs  orchestrator.rs  pretrigger.rs  signals.rs  solicitor.rs  types.rs
src/engine/sentiment/orchestrator/: config.rs  derive.rs  mod.rs  state.rs
src/engine/skills/: hooks.rs  mod.rs  ref.rs  store.rs
src/engine/storage/: error.rs  filesystem.rs  key.rs  lock.rs  memory.rs  metadata.rs  mod.rs  version.rs
src/engine/teams/: mod.rs  store.rs
src/engine/vector/: error.rs  hnsw.rs  mod.rs
src/engine/yaml/: frontmatter.rs  mod.rs  reader.rs  scalar.rs  schema.rs  writer.rs
src/host/: mod.rs
src/host/claude_code/: mod.rs
src/host/claude_code/jsonl_watcher/: cursor.rs  events.rs  mod.rs  parser.rs  runner.rs  source.rs
src/lessons/: loader.rs  signals.rs
src/yaml/: frontmatter.rs  mod.rs  reader.rs  schema.rs  writer.rs
tests/: byte_fixture.rs  compression_wedge_e2e.rs  concurrent_signal_writes.rs  llm_narrative_manifest_e2e.rs  orchestrator_e2e.rs  skill_wedge_e2e.rs  ts_lesson_roundtrip.rs
