[package]
name = "loop-daemon"
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
description = "Live verification daemon for Loop — watches Claude Code sessions for sentiment signals and emits to the lesson layer"
license = "MIT"
repository = "https://github.com/RankLabsDev/loop-daemon"
publish = false

[[bin]]
name = "loop-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs"] }
# CancellationToken — sticky shutdown primitive. Switched from
# `tokio::sync::Notify` after Day 10 audit found a signal-before-waiter
# race: if SIGTERM arrives before the heartbeat loop registers on
# `notify_waiters`, the wake is lost and the daemon hangs. CancellationToken
# is sticky — `is_cancelled()` survives ordering.
tokio-util = { version = "0.7", default-features = false }

# CLI / args
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Daemonization (fork + setsid + PID file)
daemonize = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
# serde_yml is the actively-maintained fork of the archived serde_yaml. Used
# for ~/.loop/config.yaml only; lesson frontmatter uses our purpose-built
# YAML reader (Day 11).
serde_yml = "0.0.12"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

# Paths
dirs = "6"

# Unix primitives (PID probing, signals)
libc = "0.2"

# Advisory cross-process file lock (flock on Unix, LockFile on Windows).
# Used to coordinate lesson-file writes with the TS MCP server. MIT/Apache.
fd-lock = "4"

# Cross-platform file-watching (FSEvents on macOS, inotify on Linux,
# ReadDirectoryChangesW on Windows). Used by the JSONL watcher.
# License: CC0-1.0 — first non-MIT/Apache dep in the daemon; SPDX-recognized,
# permissive, satisfies the no-AGPL/GPL/SSPL rule. See THIRD_PARTY_LICENSES.md.
notify = "8"

# JSON-line parsing for Claude Code session transcripts. MIT/Apache.
serde_json = "1"

# Async trait shims for object-safe `Storage` + `EventSource` traits.
# Native `async fn in trait` (stable since 1.75) is object-safe but
# returns non-Send futures by default; `async_trait` boxes the future
# and marks Send, which we need for `Arc<dyn Storage>` across
# tokio multi-thread runtime. MIT/Apache.
async-trait = "0.1"

# Byte buffer for storage payloads. Already a transitive of tokio/reqwest;
# promoted to direct dep. MIT.
bytes = "1"

# `BoxStream` type alias used by `EventSource`. MIT/Apache.
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Sentiment pretrigger pattern. Promoted to direct dep Day 15 (was
# already transitive via `tracing-subscriber`). MIT/Apache.
regex = "1"

[features]
# Test fixtures: ships `MockSentimentClassifier` for cross-crate test
# code (integration tests, future external consumers). Production
# builds compile without it. Locked in Day 15 learn-notes D13.
test-fixtures = []

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
dirs = "6"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
