[package]
name = "loop-engine"
version = "0.5.0"
edition = "2024"
rust-version = "1.95"
description = "Cognitive-memory substrate for AI agents — manifest assembly, lesson lifecycle, scoped memory, and a wedge-gated promotion check"
license = "MIT"
repository = "https://github.com/MindcraftorAI/loop-engine"
readme = "README.md"
keywords = ["agent", "memory", "llm", "mcp", "cognitive"]
categories = ["data-structures", "asynchronous"]
# Phase H D-H3: publish gate stays closed inside the monorepo. The
# standalone repo split + crates.io publish happen post-v1.0-tag as
# separate operations (see CONTRIBUTING.md "Releasing").
publish = false

[[bin]]
name = "loop-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs", "io-std", "io-util"] }
# CancellationToken — sticky shutdown primitive. Switched from
# `tokio::sync::Notify` after Day 10 audit found a signal-before-waiter
# race: if SIGTERM arrives before the heartbeat loop registers on
# `notify_waiters`, the wake is lost and the daemon hangs. CancellationToken
# is sticky — `is_cancelled()` survives ordering.
tokio-util = { version = "0.7", default-features = false }

# CLI / args
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
# serde_yml is the actively-maintained fork of the archived serde_yaml. Used
# for ~/.loop/config.yaml only; lesson frontmatter uses our purpose-built
# YAML reader (Day 11).
serde_yml = "0.0.12"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

# Paths
dirs = "6"

# Unix primitives (PID probing, signals). Used only in Unix-only code
# paths (daemon detach/stop, pid_is_alive); the target-specific dep
# block below keeps it off Windows entirely, and the call sites are
# cfg-gated to match. Windows binary doesn't ship the libc surface.

# Advisory cross-process file lock (flock on Unix, LockFile on Windows).
# Used to coordinate lesson-file writes with the TS MCP server. MIT/Apache.
fd-lock = "4"

# Cross-platform file-watching (FSEvents on macOS, inotify on Linux,
# ReadDirectoryChangesW on Windows). Used by the JSONL watcher.
# License: CC0-1.0 — first non-MIT/Apache dep in the daemon; SPDX-recognized,
# permissive, satisfies the no-AGPL/GPL/SSPL rule. See THIRD_PARTY_LICENSES.md.
notify = "8"

# JSON-line parsing for Claude Code session transcripts. MIT/Apache.
serde_json = "1"

# Async trait shims for object-safe `Storage` + `EventSource` traits.
# Native `async fn in trait` (stable since 1.75) is object-safe but
# returns non-Send futures by default; `async_trait` boxes the future
# and marks Send, which we need for `Arc<dyn Storage>` across
# tokio multi-thread runtime. MIT/Apache.
async-trait = "0.1"

# Byte buffer for storage payloads. Already a transitive of tokio/reqwest;
# promoted to direct dep. MIT.
bytes = "1"

# OpenAI-compatible Embedder + LlmClient implementations talk HTTP to
# providers (OpenAI cloud, Ollama, TEI, LM Studio, Voyage). `rustls-tls`
# avoids the OpenSSL system dep. MIT/Apache.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# `BoxStream` type alias used by `EventSource`. MIT/Apache.
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Sentiment pretrigger pattern. Promoted to direct dep Day 15 (was
# already transitive via `tracing-subscriber`). MIT/Apache.
regex = "1"

# Per-session keyed mutable state for the sentiment orchestrator.
# Day 16a D6: short critical sections, no fairness need; DashMap is
# the textbook fit. MIT.
dashmap = "6"

# Bridges `tokio::sync::mpsc::UnboundedReceiver` to `Stream` for the
# JsonlWatcher → EventSource impl. Already transitive of tokio-util;
# promoted to direct dep for clarity. MIT.
tokio-stream = "0.1"

# Semver-aware version comparison for `HostVersionPolicy`. Day 17 m4
# audit fix: lexicographic compare on dotted-decimal versions breaks
# at the "2.1.139" vs "2.1.40" gotcha. Already a transitive in
# Cargo.lock; Phase A C1 promotes to direct dep. MIT OR Apache-2.0.
semver = { version = "1", default-features = false }

# Phase E C-E2: HNSW (Hierarchical Navigable Small World) approximate-
# nearest-neighbor index for the local `VectorIndex` impl. Default
# features only — no SIMD opt-ins for maximal portability. MIT OR
# Apache-2.0. Maintained at github.com/jean-pierreBoth/hnswlib-rs.
hnsw_rs = { version = "0.3", default-features = false }

# Phase E C-E2: `parking_lot::RwLock` for HNSW state interior
# mutability. Significantly faster than `std::sync::RwLock` on most
# platforms; no poisoning surface (panic-during-write doesn't lock
# out subsequent readers, which suits our use case where the writer
# is the daemon and panics terminate the process anyway). MIT.
parking_lot = "0.12"

# Phase E C-E2: tempfile crate for the persist/load bridge — hnsw_rs
# requires real filesystem paths for dump/reload (`file_dump` /
# `HnswIo::new`). We bridge: dump to tempdir → read bytes → put
# through `Storage` (and reverse on load). Was previously a
# dev-dependency only; promoted to a runtime dep for the HNSW
# bridge. MIT OR Apache-2.0.
tempfile = "3"

# Unix-only deps. `daemonize` is fork+setsid — has no Windows target at
# all. `libc` is technically cross-platform but the only sites that use
# it (pid::pid_is_alive via `libc::kill(pid, 0)`, main::stop via
# `libc::kill(pid, SIGTERM)`) are Unix daemon-control primitives that
# don't translate to Windows. Windows binary ships with these sites
# cfg-gated to return an actionable "use `serve` or `run --foreground`"
# error — see src/main.rs and src/engine/pid.rs.
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc = "0.2"

[features]
# Test fixtures: ships `MockSentimentClassifier` for cross-crate test
# code (integration tests, future external consumers). Production
# builds compile without it. Locked in Day 15 learn-notes D13.
test-fixtures = []

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
dirs = "6"
# Self-reference enables `--features test-fixtures` in tests/ so
# integration tests can use `MockSentimentClassifier` etc. Locked
# Day 15 D13; gap caught in Day 15 audit M3.
loop-engine = { path = ".", features = ["test-fixtures"] }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
